[gd_scene load_steps=17 format=2]

[ext_resource path="res://Nodes/Ui/Description.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Ui/HighlightLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Ui/arrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultbox_inside.png" type="Texture" id=4]
[ext_resource path="res://Nodes/Ui/EquipMenu/EquipMenuUI.gd" type="Script" id=5]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultbox.png" type="Texture" id=6]
[ext_resource path="res://Nodes/Ui/EquipMenu/StatsLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Nodes/Ui/InventorySelect.tscn" type="PackedScene" id=8]
[ext_resource path="res://Graphics/UI/EquipMenu/empty.png" type="Texture" id=9]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultempty.png" type="Texture" id=11]
[ext_resource path="res://Shaders/MenuFlavors.tres" type="Material" id=12]
[ext_resource path="res://Scripts/UI/colorRectFlavor.gd" type="Script" id=13]

[sub_resource type="StyleBoxTexture" id=5]
content_margin_right = 0.0
content_margin_top = 5.0
content_margin_bottom = 5.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 24, 24 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_left = 12.0
expand_margin_right = 10.0
expand_margin_bottom = 2.0

[sub_resource type="Animation" id=2]
resource_name = "Close"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.4, 0.450625 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -140 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EquipMenu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EquipMenu/Description:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 28, 132 ), Vector2( 28, 320 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Open"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -180 ), Vector2( 0, 2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EquipMenu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EquipMenu/Description:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 28, 360 ), Vector2( 28, 128 ), Vector2( 28, 132 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EquipMenu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EquipMenu/Description:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28, 132 ) ]
}

[node name="EquipMenuUI" type="CanvasLayer"]
layer = 2
script = ExtResource( 5 )

[node name="EquipMenu" type="Control" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 180.0

[node name="Box" type="NinePatchRect" parent="EquipMenu"]
material = ExtResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_right = -28.0
margin_bottom = -47.0
texture = ExtResource( 11 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Panels" type="HBoxContainer" parent="EquipMenu/Box"]
margin_left = 12.0
margin_top = 23.0
margin_right = 264.0
margin_bottom = 132.0
custom_constants/separation = 6

[node name="Stats" type="PanelContainer" parent="EquipMenu/Box/Panels"]
material = ExtResource( 12 )
margin_right = 140.0
margin_bottom = 108.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 5 )

[node name="Columns" type="HBoxContainer" parent="EquipMenu/Box/Panels/Stats"]
margin_left = 8.0
margin_top = 5.0
margin_right = 140.0
margin_bottom = 103.0
custom_constants/separation = 0

[node name="Labels" type="VBoxContainer" parent="EquipMenu/Box/Panels/Stats/Columns"]
margin_right = 69.0
margin_bottom = 98.0
rect_min_size = Vector2( 60, 0 )
custom_constants/separation = 0

[node name="Spacer" type="Control" parent="EquipMenu/Box/Panels/Stats/Columns/Labels"]
margin_right = 69.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )

[node name="MaxHPLabel" parent="EquipMenu/Box/Panels/Stats/Columns/Labels" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 14.0
margin_right = 69.0
margin_bottom = 26.0
text = "STAT_MAXHP"

[node name="MaxPPLabel" parent="EquipMenu/Box/Panels/Stats/Columns/Labels" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 26.0
margin_right = 69.0
margin_bottom = 38.0
text = "STAT_MAXPP"

[node name="OffenseLabel" parent="EquipMenu/Box/Panels/Stats/Columns/Labels" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 38.0
margin_right = 69.0
margin_bottom = 50.0
text = "STAT_OFFENSE"

[node name="DefenseLabel" parent="EquipMenu/Box/Panels/Stats/Columns/Labels" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 50.0
margin_right = 69.0
margin_bottom = 62.0
text = "STAT_DEFENSE"

[node name="IQLabel" parent="EquipMenu/Box/Panels/Stats/Columns/Labels" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 62.0
margin_right = 69.0
margin_bottom = 74.0
text = "STAT_IQ"

[node name="SpeedLabel" parent="EquipMenu/Box/Panels/Stats/Columns/Labels" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 74.0
margin_right = 69.0
margin_bottom = 86.0
text = "STAT_SPEED"

[node name="GutsLabel" parent="EquipMenu/Box/Panels/Stats/Columns/Labels" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 86.0
margin_right = 69.0
margin_bottom = 98.0
text = "STAT_GUTS"

[node name="Spacer1" type="Control" parent="EquipMenu/Box/Panels/Stats/Columns"]
margin_left = 69.0
margin_right = 74.0
margin_bottom = 98.0
rect_min_size = Vector2( 5, 0 )

[node name="Values" type="VBoxContainer" parent="EquipMenu/Box/Panels/Stats/Columns"]
margin_left = 74.0
margin_right = 100.0
margin_bottom = 98.0
rect_min_size = Vector2( 26, 0 )
custom_constants/separation = 0

[node name="LevelValue" parent="EquipMenu/Box/Panels/Stats/Columns/Values" instance=ExtResource( 7 )]
margin_right = 26.0
text = "99"
align = 2

[node name="MaxHPValue" parent="EquipMenu/Box/Panels/Stats/Columns/Values" instance=ExtResource( 7 )]
margin_top = 12.0
margin_right = 26.0
margin_bottom = 24.0
align = 2

[node name="MaxPPValue" parent="EquipMenu/Box/Panels/Stats/Columns/Values" instance=ExtResource( 7 )]
margin_top = 24.0
margin_right = 26.0
margin_bottom = 36.0
align = 2

[node name="OffenseValue" parent="EquipMenu/Box/Panels/Stats/Columns/Values" instance=ExtResource( 7 )]
margin_top = 36.0
margin_right = 26.0
margin_bottom = 48.0
align = 2

[node name="DefenseValue" parent="EquipMenu/Box/Panels/Stats/Columns/Values" instance=ExtResource( 7 )]
margin_top = 48.0
margin_right = 26.0
margin_bottom = 60.0
align = 2

[node name="IQValue" parent="EquipMenu/Box/Panels/Stats/Columns/Values" instance=ExtResource( 7 )]
margin_top = 60.0
margin_right = 26.0
margin_bottom = 72.0
align = 2

[node name="SpeedValue" parent="EquipMenu/Box/Panels/Stats/Columns/Values" instance=ExtResource( 7 )]
margin_top = 72.0
margin_right = 26.0
margin_bottom = 84.0
align = 2

[node name="GutsValue" parent="EquipMenu/Box/Panels/Stats/Columns/Values" instance=ExtResource( 7 )]
margin_top = 84.0
margin_right = 26.0
margin_bottom = 96.0
align = 2

[node name="Spacer2" type="Control" parent="EquipMenu/Box/Panels/Stats/Columns"]
margin_left = 100.0
margin_right = 103.0
margin_bottom = 98.0
rect_min_size = Vector2( 3, 0 )

[node name="BoostIcons" type="VBoxContainer" parent="EquipMenu/Box/Panels/Stats/Columns"]
margin_left = 103.0
margin_right = 111.0
margin_bottom = 98.0
custom_constants/separation = 4

[node name="Spacer" type="Control" parent="EquipMenu/Box/Panels/Stats/Columns/BoostIcons"]
margin_right = 8.0

[node name="LevelIcon" type="TextureButton" parent="EquipMenu/Box/Panels/Stats/Columns/BoostIcons"]
margin_top = 4.0
margin_right = 8.0
margin_bottom = 12.0
texture_normal = ExtResource( 9 )

[node name="MaxHPIcon" type="TextureButton" parent="EquipMenu/Box/Panels/Stats/Columns/BoostIcons"]
margin_top = 16.0
margin_right = 8.0
margin_bottom = 24.0
texture_normal = ExtResource( 9 )

[node name="MaxPPIcon" type="TextureButton" parent="EquipMenu/Box/Panels/Stats/Columns/BoostIcons"]
margin_top = 28.0
margin_right = 8.0
margin_bottom = 36.0
texture_normal = ExtResource( 9 )

[node name="OffenseIcon" type="TextureButton" parent="EquipMenu/Box/Panels/Stats/Columns/BoostIcons"]
margin_top = 40.0
margin_right = 8.0
margin_bottom = 48.0
texture_normal = ExtResource( 9 )

[node name="DefenseIcon" type="TextureButton" parent="EquipMenu/Box/Panels/Stats/Columns/BoostIcons"]
margin_top = 52.0
margin_right = 8.0
margin_bottom = 60.0
texture_normal = ExtResource( 9 )

[node name="IQIcon" type="TextureButton" parent="EquipMenu/Box/Panels/Stats/Columns/BoostIcons"]
margin_top = 64.0
margin_right = 8.0
margin_bottom = 72.0
texture_normal = ExtResource( 9 )

[node name="SpeedIcon" type="TextureButton" parent="EquipMenu/Box/Panels/Stats/Columns/BoostIcons"]
margin_top = 76.0
margin_right = 8.0
margin_bottom = 84.0
texture_normal = ExtResource( 9 )

[node name="GutsIcon" type="TextureButton" parent="EquipMenu/Box/Panels/Stats/Columns/BoostIcons"]
margin_top = 88.0
margin_right = 8.0
margin_bottom = 96.0
texture_normal = ExtResource( 9 )

[node name="BoostValues" type="VBoxContainer" parent="EquipMenu/Box/Panels/Stats/Columns"]
margin_left = 111.0
margin_right = 132.0
margin_bottom = 98.0
rect_min_size = Vector2( 21, 0 )
custom_constants/separation = 0

[node name="LevelValue" parent="EquipMenu/Box/Panels/Stats/Columns/BoostValues" instance=ExtResource( 7 )]
text = ""
align = 2

[node name="MaxHPValue" parent="EquipMenu/Box/Panels/Stats/Columns/BoostValues" instance=ExtResource( 7 )]
margin_top = 12.0
margin_bottom = 24.0
align = 2

[node name="MaxPPValue" parent="EquipMenu/Box/Panels/Stats/Columns/BoostValues" instance=ExtResource( 7 )]
margin_top = 24.0
margin_bottom = 36.0
align = 2

[node name="OffenseValue" parent="EquipMenu/Box/Panels/Stats/Columns/BoostValues" instance=ExtResource( 7 )]
margin_top = 36.0
margin_bottom = 48.0
align = 2

[node name="DefenseValue" parent="EquipMenu/Box/Panels/Stats/Columns/BoostValues" instance=ExtResource( 7 )]
margin_top = 48.0
margin_bottom = 60.0
align = 2

[node name="IQValue" parent="EquipMenu/Box/Panels/Stats/Columns/BoostValues" instance=ExtResource( 7 )]
margin_top = 60.0
margin_bottom = 72.0
align = 2

[node name="SpeedValue" parent="EquipMenu/Box/Panels/Stats/Columns/BoostValues" instance=ExtResource( 7 )]
margin_top = 72.0
margin_bottom = 84.0
align = 2

[node name="GutsValue" parent="EquipMenu/Box/Panels/Stats/Columns/BoostValues" instance=ExtResource( 7 )]
margin_top = 84.0
margin_bottom = 96.0
align = 2

[node name="Slots" type="NinePatchRect" parent="EquipMenu/Box/Panels"]
material = ExtResource( 12 )
margin_left = 146.0
margin_right = 252.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 110 )
rect_pivot_offset = Vector2( 59, 58 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="SlotsNames" type="VBoxContainer" parent="EquipMenu/Box/Panels/Slots"]
margin_left = 10.0
margin_top = 7.0
margin_right = 79.0
margin_bottom = 102.0
custom_constants/separation = 12

[node name="Weapon" parent="EquipMenu/Box/Panels/Slots/SlotsNames" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_right = 69.0
text = "EQUIP_WEAPON"

[node name="Body" parent="EquipMenu/Box/Panels/Slots/SlotsNames" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 24.0
margin_right = 69.0
margin_bottom = 36.0
text = "EQUIP_BODY"

[node name="Head" parent="EquipMenu/Box/Panels/Slots/SlotsNames" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 48.0
margin_right = 69.0
margin_bottom = 60.0
text = "EQUIP_HEAD"

[node name="Other" parent="EquipMenu/Box/Panels/Slots/SlotsNames" instance=ExtResource( 2 )]
self_modulate = Color( 0.74902, 0.705882, 0.803922, 1 )
margin_top = 72.0
margin_right = 69.0
margin_bottom = 84.0
text = "EQUIP_OTHER"

[node name="EquippeditemsNames" type="VBoxContainer" parent="EquipMenu/Box/Panels/Slots"]
anchor_right = 1.0
margin_left = 15.0
margin_top = 18.0
margin_right = -5.0
margin_bottom = 113.0
custom_constants/separation = 12

[node name="EquippedWeapon" parent="EquipMenu/Box/Panels/Slots/EquippeditemsNames" instance=ExtResource( 2 )]
modulate = Color( 0.952941, 0.94902, 0.956863, 1 )
margin_right = 86.0
text = "EQUIP_EMPTY"

[node name="EquippedBody" parent="EquipMenu/Box/Panels/Slots/EquippeditemsNames" instance=ExtResource( 2 )]
modulate = Color( 0.952941, 0.94902, 0.956863, 1 )
margin_top = 24.0
margin_right = 86.0
margin_bottom = 36.0
text = "EQUIP_EMPTY"

[node name="EquippedHead" parent="EquipMenu/Box/Panels/Slots/EquippeditemsNames" instance=ExtResource( 2 )]
modulate = Color( 0.952941, 0.94902, 0.956863, 1 )
margin_top = 48.0
margin_right = 86.0
margin_bottom = 60.0
text = "EQUIP_EMPTY"

[node name="EquippedOther" parent="EquipMenu/Box/Panels/Slots/EquippeditemsNames" instance=ExtResource( 2 )]
modulate = Color( 0.952941, 0.94902, 0.956863, 1 )
margin_top = 72.0
margin_right = 86.0
margin_bottom = 84.0
text = "EQUIP_EMPTY"

[node name="SlotArrow" parent="EquipMenu/Box/Panels/Slots" instance=ExtResource( 3 )]
position = Vector2( 8, 24 )
menu_parent_path = NodePath("../EquippeditemsNames")
cursor_offset = Vector2( -4, 1 )
loop_around = true
move_sfx = true
select_sfx = true

[node name="Position2D" type="Position2D" parent="EquipMenu/Box/Panels/Slots/SlotArrow"]
position = Vector2( 9, 9 )

[node name="ItemListPanel" type="ColorRect" parent="EquipMenu/Box/Panels/Slots"]
visible = false
anchor_right = 1.0
margin_left = 5.0
margin_top = 6.0
margin_right = -5.0
margin_bottom = 103.0
color = Color( 0.0784314, 0.0666667, 0.0901961, 1 )
script = ExtResource( 13 )

[node name="ItemList" type="VBoxContainer" parent="EquipMenu/Box/Panels/Slots/ItemListPanel"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 1.0
margin_bottom = 42.0
custom_constants/separation = 1

[node name="ItemArrow" parent="EquipMenu/Box/Panels/Slots/ItemListPanel" instance=ExtResource( 3 )]
position = Vector2( 3, 6 )
menu_parent_path = NodePath("../ItemList")
cursor_offset = Vector2( -4, 1 )
loop_around = true
move_sfx = true
select_sfx = true
cancel_sfx = true

[node name="CharacterName" parent="EquipMenu/Box" instance=ExtResource( 2 )]
margin_left = 11.0
margin_top = 30.0
margin_right = 84.0
margin_bottom = 42.0
text = "Ninten"

[node name="InventorySelect" parent="EquipMenu/Box" instance=ExtResource( 8 )]
anchor_right = 1.0
margin_left = 0.0
margin_right = 0.0
menuName = "MENU_TITLE_EQUIP"

[node name="Description" type="NinePatchRect" parent="EquipMenu"]
material = ExtResource( 12 )
anchor_right = 1.0
margin_left = 28.0
margin_top = 132.0
margin_right = -28.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 59, 58 )
texture = ExtResource( 6 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="DescriptionPanel" parent="EquipMenu/Description" instance=ExtResource( 1 )]
anchor_right = 1.0
margin_right = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 2 )
anims/Open = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="character_changed" from="EquipMenu/Box/InventorySelect" to="." method="_on_InventorySelect_character_changed"]
